[project]
name = "rdchiral"
version = "1.1.1"
description = "Wrapper for RDKit's RunReactants to improve stereochemistry handling"
readme = "README.md"
authors = [
    { name = "Connor Coley", email="ccoley@mit.edu" },  # "@connorcoley"
]
requires-python = ">=3.5"
dependencies = ["rdkit"]
url = "https://github.com/connorcoley/rdchiral/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.scripts]
# rdchiral = "rdchiral.rdchiral:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
